[package]
name = "hayatlib_beta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs.git" }
itertools = "0.11.0"
proconio = "0.4.5"
